@@ -118,14 +118,15 @@ SEventManager::process (void)
 		--processing;
 
 		// DEBUG:
-		/*
 		Log::Info << "Event[" << event.get_name() <<
-			"] P:" << (intptr_t)event <<
-			" R:" << (event.get_room() ? event.get_room()->get_id() : "n/a") <<
-			" A:" << (event.get_actor() ? event.get_actor()->get_name() : "n/a") <<
-			" T:" << (event.get_target() ? event.get_target()->get_name() : "n/a") <<
-			" D:" << (event.get_data() ? Scriptix::IDToName(event.get_data()->GetType()->GetName()) : "n/a");
-		*/
+			"] P:" << event.get_id().name() <<
+			" R:" << (event.get_room() ? event.get_room()->get_id().c_str() : "n/a") <<
+			" A:" << (event.get_actor() ? event.get_actor()->get_name().get_name().c_str() : "n/a") <<
+			" D:" << (event.get_data(0) ? event.get_data(0).get_type()->get_name().name().c_str() : "n/a") <<
+			" D:" << (event.get_data(1) ? event.get_data(1).get_type()->get_name().name().c_str() : "n/a") <<
+			" D:" << (event.get_data(2) ? event.get_data(2).get_type()->get_name().name().c_str() : "n/a") <<
+			" D:" << (event.get_data(3) ? event.get_data(3).get_type()->get_name().name().c_str() : "n/a") <<
+			" D:" << (event.get_data(4) ? event.get_data(4).get_type()->get_name().name().c_str() : "n/a");
 
 		// send event
 		event.get_room()->handle_event(event);
