@@ -1,3 +1,7 @@
+2006-07-17 01:43:44  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Re-enable the attack_hit action on weapons during combat.
+
 2006-07-16 12:49:25  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Replace all uses of print and printf methods in scripts with
